--- a/index.html
+++ b/index.html
@@ -9,16 +9,22 @@
     <title>My First Calculator</title>
   </head>
   <body>
-    <div class="container">
-      <div class="row">
-        <button type="button" name="button">Answer</button>
-      </div>
-      <div class="row">
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
-        <button type="button" name="button"></button>
 
+    <div class="container">
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-lg-4">
+          <button type="button" name="button">Answer</button>
+        </div>
+      </div>
+
+      <div class="row">
+        <div class="col-xs-12 col-md-6 col-lg-8">
+          <button type="button" name="button">0</button>
+          <button type="button" name="button">1</button>
+          <button type="button" name="button">+</button>
+          <button type="button" name="button">=</button>
+        </div>
       </div>
 
     </div>
