--- a/index.html
+++ b/index.html
@@ -9,21 +9,40 @@
     <title>My First Calculator</title>
   </head>
   <body>
-
+    <div class="container-fluid">
+    </div>
     <div class="container">
-
       <div class="row">
-        <div class="col-xs-12 col-md-6 col-lg-4">
-          <button type="button" name="button">Answer</button>
+          <h2>Answer</h2>
+        <form class="topAnwser" action="index.html" method="post">
+          <input type="text" name="answer" value="">
+        </form>
         </div>
       </div>
-
-      <div class="row">
-        <div class="col-xs-12 col-md-6 col-lg-8">
+      <div class="row" >
+        <div class="col-xs-12 col-md-6 col-lg-5 ">
+          <h2>Numbers</h2>
           <button type="button" name="button">0</button>
           <button type="button" name="button">1</button>
+          <button type="button" name="button">2</button>
+          <button type="button" name="button">3</button>
+          <button type="button" name="button">4</button>
+          <br>
+          <button type="button" name="button">5</button>
+          <button type="button" name="button">6</button>
+          <button type="button" name="button">7</button>
+          <button type="button" name="button">8</button>
+          <button type="button" name="button">9</button>
+        </div>
+        <div class="col-xs-12 col-md-6 col-lg-7">
+          <h2>Operators</h2>
           <button type="button" name="button">+</button>
+          <button type="button" name="button">-</button>
+          <button type="button" name="button">*</button>
+          <br>
+          <button type="button" name="button">/</button>
           <button type="button" name="button">=</button>
+          <button type="button" name="button">Clear</button>
         </div>
       </div>
 
