--- a/index.html
+++ b/index.html
@@ -13,15 +13,17 @@
     </div>
     <div class="container">
       <div class="row">
-          <h2>Answer</h2>
+          <h1>Answer</h1>
+            <br>
         <form class="topAnwser" action="index.html" method="post">
           <input type="text" name="answer" value="">
         </form>
-        </div>
+            <br>
       </div>
       <div class="row" >
-        <div class="col-xs-12 col-md-6 col-lg-5 ">
+        <div class="col-xs-12 col-md-6 col-lg-6">
           <h2>Numbers</h2>
+          <br>
           <button type="button" name="button">0</button>
           <button type="button" name="button">1</button>
           <button type="button" name="button">2</button>
@@ -31,19 +33,22 @@
           <button type="button" name="button">5</button>
           <button type="button" name="button">6</button>
           <button type="button" name="button">7</button>
-          <button type="button" name="button">8</button>
+          <button type="button" name="button">8</buxtton>
           <button type="button" name="button">9</button>
+          <br>
         </div>
-        <div class="col-xs-12 col-md-6 col-lg-7">
+        <div class="col-xs-12 col-md-6 col-lg-6">
           <h2>Operators</h2>
+          <br>
           <button type="button" name="button">+</button>
           <button type="button" name="button">-</button>
           <button type="button" name="button">*</button>
           <br>
           <button type="button" name="button">/</button>
           <button type="button" name="button">=</button>
-          <button type="button" name="button">Clear</button>
+          <button type="button" name="button">CL</button>
         </div>
+        <br>
       </div>
 
     </div>
